--- a/Dockerfile.cross
+++ b/Dockerfile.cross
@@ -1,11 +1,6 @@
 ARG BASE=debian:stretch-slim
 
-FROM $BASE
-
-ARG arch=none
-ENV ARCH=$arch
-
-COPY qemu/qemu-$ARCH-static* /usr/bin/
+FROM --platform=$TARGETPLATFORM $BASE
 
 ARG FR24FEED_ARM_VERSION=1.0.23-8
 ARG FR24FEED_ARM_HASH=adc72b6a5ffe0eb089748cd26a981eac7468b5a61ee0783c7e3bc3c0ee9c52b4
