Changed the aarch

--- a/Dockerfile.cross
+++ b/Dockerfile.cross
@@ -19,7 +19,7 @@ RUN apt-get update \
     rm -rf /var/lib/apt/lists/*
 
 RUN set -ex; \
-	if [ ${ARCH} = "arm" -o ${ARCH} = "arm64" -o ${ARCH} = "aarch64" ]; then \
+	if [ ${TARGETARCH} = "arm" -o ${TARGETARCH} = "arm64" -o ${TARGETARCH} = "aarch64" ]; then \
 		echo "Download armhf version";\
 		curl --output fr24feed.tgz "http://repo.feed.flightradar24.com/rpi_binaries/fr24feed_${FR24FEED_ARM_VERSION}_armhf.tgz"; \
 	    sha256sum fr24feed.tgz && echo "${FR24FEED_ARM_HASH}  fr24feed.tgz" | sha256sum -c ; \
@@ -27,7 +27,7 @@ RUN set -ex; \
 	    mv fr24feed /usr/bin/fr24feed ; \
 	    rm fr24feed.tgz ; \
 	fi; \
-    if [ ${ARCH} = "amd64" ]; then \
+    if [ ${TARGETARCH} = "amd64" ]; then \
 		echo "Download AMD64 version" ; \
 		curl --output fr24feed.tgz "https://repo-feed.flightradar24.com/linux_x86_64_binaries/fr24feed_${FR24FEED_AMD_VERSION}_amd64.tgz" ; \
 		sha256sum fr24feed.tgz && echo "${FR24FEED_AMD_HASH}  fr24feed.tgz" | sha256sum -c ; \
