--- a/Dockerfile.cross
+++ b/Dockerfile.cross
@@ -7,7 +7,7 @@ ARG FR24FEED_ARM_HASH=adc72b6a5ffe0eb089748cd26a981eac7468b5a61ee0783c7e3bc3c0ee
 ARG FR24FEED_AMD_VERSION=1.0.18-5
 ARG FR24FEED_AMD_HASH=770e86b640bcbb8850df67aaa8072a85ac941e2e2f79ea25ef44d67e89bc5649
 
-ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND=noninteractive TARGETARCH=$TARGETARCH
 
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends \
