--- a/Dockerfile.cross
+++ b/Dockerfile.cross
@@ -2,12 +2,13 @@ ARG BASE=debian:stretch-slim
 
 FROM --platform=$TARGETPLATFORM $BASE
 
+ARG TARGETARCH
 ARG FR24FEED_ARM_VERSION=1.0.23-8
 ARG FR24FEED_ARM_HASH=adc72b6a5ffe0eb089748cd26a981eac7468b5a61ee0783c7e3bc3c0ee9c52b4
 ARG FR24FEED_AMD_VERSION=1.0.18-5
 ARG FR24FEED_AMD_HASH=770e86b640bcbb8850df67aaa8072a85ac941e2e2f79ea25ef44d67e89bc5649
 
-ENV DEBIAN_FRONTEND=noninteractive TARGETARCH=$TARGETARCH
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends \
