--- a/travis/build.config
+++ b/travis/build.config
@@ -1,5 +1,14 @@
-#Where to put the built docker image
+# Where to put the built docker image
 REPO="shoginn/flightradar24"
 
-#Base image for each arch
+# Base image for each arch
 BASE=debian:stretch-slim
+
+# Architectures to build
+ARCHITECTURES="arm arm64 amd64"
+
+# Metadata Variables
+MAINTAINER="ginnserv@gmail.com"
+NAME="Docker ADS-B - flightradar24"
+DESCRIPTION="Docker container for ADS-B - This is the flightradar24.com component"
+URL="https://github.com/ShoGinn/flightradar24"
