--- a/Dockerfile.cross
+++ b/Dockerfile.cross
@@ -1,6 +1,14 @@
-ARG BASE=debian:stretch-slim
+ARG BASE
+FROM $BASE AS base
 
-FROM --platform=$TARGETPLATFORM $BASE
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends \
+	iputils-ping \
+	dnsutils && \
+	apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+FROM --platform=$TARGETPLATFORM $BASE as builder
 
 ARG TARGETARCH
 ARG FR24FEED_ARM_VERSION=1.0.23-8
@@ -14,13 +22,9 @@ RUN apt-get update \
 	&& apt-get install -y --no-install-recommends \
 	curl \
 	ca-certificates \
-	iputils-ping \
-	dnsutils && \
-	apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
 
 RUN set -ex; \
-	if [ ${TARGETARCH} = "arm" -o ${TARGETARCH} = "arm64" -o ${TARGETARCH} = "aarch64" ]; then \
+	if [ ${TARGETARCH} = "arm" -o ${TARGETARCH} = "arm64" ]; then \
 		echo "Download armhf version";\
 		curl --output fr24feed.tgz "http://repo.feed.flightradar24.com/rpi_binaries/fr24feed_${FR24FEED_ARM_VERSION}_armhf.tgz"; \
 	    sha256sum fr24feed.tgz && echo "${FR24FEED_ARM_HASH}  fr24feed.tgz" | sha256sum -c ; \
@@ -37,6 +41,10 @@ RUN set -ex; \
 	    rm fr24feed.tgz ; \
 	fi;
 
+FROM base
+
+COPY --from=builder /usr/bin/fr24feed /usr/bin/fr24feed
+
 # https://feed.flightradar24.com/fr24feed-manual.pdf
 COPY fr24feed.ini /etc/fr24feed.ini
 COPY fr24feed-runner.sh /usr/bin/fr24feed-runner
@@ -48,11 +56,19 @@ HEALTHCHECK --start-period=1m --interval=30s --timeout=5s --retries=3 CMD curl -
 ENTRYPOINT ["fr24feed-runner"]
 
 # Metadata
-ARG VCS_REF="Unknown"
-LABEL maintainer="ginnserv@gmail.com" \
-      org.label-schema.name="Docker ADS-B - flightradar24" \
-      org.label-schema.description="Docker container for ADS-B - This is the flightradar24.com component" \
-      org.label-schema.url="https://github.com/ShoGinn/flightradar24" \
-      org.label-schema.vcs-ref="${VCS_REF}" \
-      org.label-schema.vcs-url="https://github.com/ShoGinn/flightradar24" \
-      org.label-schema.schema-version="1.0"
+ARG MAINTAINER
+ARG NAME
+ARG DESCRIPTION
+ARG URL
+ARG BUILD_DATE
+ARG VCS_URL
+ARG VCS_REF
+
+LABEL maintainer="${MAINTAINER}" \
+  org.label-schema.build-date="${BUILD_DATE}" \
+  org.label-schema.name="${NAME}" \
+  org.label-schema.description="${DESCRIPTION}" \
+  org.label-schema.url="${URL}" \
+  org.label-schema.vcs-ref="${VCS_REF}" \
+  org.label-schema.vcs-url="${VCS_URL}" \
+  org.label-schema.schema-version="1.0"
