--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,12 @@ install:
   - curl -ksSl -o ./travis/enable-experimental-docker.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/enable-experimental-docker.sh"
   - curl -ksSl -o ./travis/build.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/build.sh"
   - curl -ksSl -o ./travis/deploy.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/deploy.sh"
-  - sudo bash travis/enable-experimental-docker.sh
+  - curl -ksSl -o ./travis/success.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/success.sh"
+  - sudo chmod +x ./travis/*.sh
+  - sudo travis/enable-experimental-docker.sh
   - sudo docker version
+  - if test -f .travis_env; then set -o allexport; source .travis_env; set +o allexport; fi
+  - sudo env
 
 before_script:
   - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' dockerfiles/*
@@ -32,16 +36,17 @@ before_script:
 
 
 script:
-  - sudo bash travis/build.sh
+  - travis/build.sh
 
 deploy:
   provider: script
-  script: sudo bash travis/deploy.sh
+  script: travis/deploy.sh
   skip_cleanup: true
   on:
     branch: master
 
-after_success:
+after_deploy:
+  - travis/success.sh
 
 notifications:
   email:
@@ -49,14 +54,10 @@ notifications:
     on_failure: change
 
 # Repo Specific
-
 env:
   global:
     - BUILD_DATE="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
-    - BUILD_NUMBER="${TRAVIS_BUILD_NUMBER}"
-    - DOCKER_DESCRIPTION="Docker container for ADS-B - This is the flightradar24.com component"
     - DOCKER_MAINTAINER="shoginn"
-    - DOCKER_NAME="flightradar24"
     - DOCKER_URL="https://shoginn.github.io"
     - SCHEMA_VERSION="1.0"
     - VCS_REF="$(git rev-parse --short HEAD)"
